# lliurex-gva-gate

./: CMakeLists.txt  LliurexGvaGateConfig.cmake  llx-gva-gate  llx-gva-gate.apparmor  llx-gva-gate.cfg  llx-gva-gate.completion  server.py
debian/: changelog  control  copyright  lib-gva-gate.install  libnss-llxgvagate.install  libpam-gva-gate.install  libpam-gva-gate.postinst  libpam-llxgvagate.postinst  libpam-llxgvagate.postrm  llxgvagate-bin.install  rules
lib/: CMakeLists.txt  exec.cpp  exec.hpp  filedb.cpp  filedb.hpp  hash.cpp  hash.hpp  http.cpp  http.hpp  libllxgvagate.cpp  libllxgvagate.hpp  observer.cpp  observer.hpp
nss/: CMakeLists.txt  nss.cpp
pam/: CMakeLists.txt  gvagate  pam.cpp
